--- a/storm-core/src/ui/public/topology.html
+++ b/storm-core/src/ui/public/topology.html
@@ -34,9 +34,19 @@
 <script src="/js/jquery.blockUI.min.js" type="text/javascript"></script>
 <script src="/js/jsonFormatter.min.js" type="text/javascript"></script>
 <script src="/js/script.js" type="text/javascript"></script>
+
+
+<link rel="stylesheet" type="text/css" href="/css/joint.css" />
 <script src="/js/visualization.js" type="text/javascript"></script>
+<script src="/js/lodash.min.js"></script>
+<script src="/js/backbone-min.js"></script>
+<script src="/js/joint.js"></script>
+<script src="/js/dagre.min.js"></script>
+
+<!--
 <script src="/js/arbor.js" type="text/javascript"></script>
 <script src="/js/arbor-graphics.js" type="text/javascript"></script>
+-->
 <script src="/js/dataTables.bootstrap.min.js" type="text/javascript"></script>
 </head>
 <body>
